# sui-client-template

./: Cargo.toml  README.md
src/: main.rs
